html; add portfolio assets

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 						<h2 class="bl-icon bl-icon-about">About Me</h2>
 					</div>
 					<div class="bl-content">
-						<h2>Research, Build, Test </h2>
 						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created by understanding the needs and wants of one's audience. By focusing on developing for users, businesses can build enjoyable experiences while reaping the rewards of an engaged and loyal audience.</p>
 						<p>By leveraging my research experience in Cognitive Science and experience in product development, I am able to gather and deliver valuable insights on how to create products with clean, pleasing experiences that coincide with user expectations. I believe understanding our mental models and processes of perception is essential to creating testable hypotheses and valuable products.</p>
 						<p>I am a lifelong learner continuously seeking to expand my skillset and repertoir of technical tools. Here are some of the technologies I have worked with during my academic and professional careers:</p>
@@ -106,9 +105,9 @@
 				<div class="bl-panel-items" id="bl-panel-work-items">
 					<div data-panel="panel-1">
 						<div>
-							<img src="images/1.jpg" />
-							<h3>Fixie bespoke</h3>
-							<p>Iphone artisan direct trade ethical Austin. Fixie bespoke banh mi ugh, deep v vinyl hashtag. Tumblr gentrify keffiyeh pop-up iphone twee biodiesel. Occupy american apparel freegan cliche. Mustache trust fund 8-bit jean shorts mumblecore thundercats. Pour-over small batch forage cray, banjo post-ironic flannel keffiyeh cred ethnic semiotics next level tousled fashion axe. Sustainable cardigan keytar fap bushwick bespoke.</p>
+							<img src="portfolio_assets/ctrends.jpg" />
+							<h3>CareerTrends</h3>
+							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use to MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. </p>
 						</div>
 					</div>
 					<div data-panel="panel-2">
