--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="bl-panel-items" id="bl-panel-work-items">
 					<div data-panel="panel-1">
 						<div>
-							<img src="portfolio_assets/ctrends.jpg" />
+							<img src="portfolio_assets/ctrends.png" />
 							<h3>CareerTrends</h3>
 							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use to MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. </p>
 						</div>
