--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h2>Portfolio</h2>
 						<p>Mung bean maize dandelion sea lettuce catsear bunya nuts ricebean tatsoi caulie horseradish pea.</p>
 						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="http://www.careertrends.com/"><img src="portfolio_assets/ctrends.jpg" /></a></li>
+							<li data-panel="panel-1"><a href="http://www.careertrends.com/"><img src="portfolio_assets/ctrends.png" /></a></li>
 							<li data-panel="panel-2"><a href="#"><img src="images/2.jpg" /></a></li>
 							<li data-panel="panel-3"><a href="#"><img src="images/3.jpg" /></a></li>
 							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
