--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 					</div>
 					<div class="bl-content">
 						<h2>Portfolio</h2>
-						<p>Mung bean maize dandelion sea lettuce catsear bunya nuts ricebean tatsoi caulie horseradish pea.</p>
 						<ul id="bl-work-items">
 							<li data-panel="panel-1"><a href="http://www.careertrends.com/"><img src="portfolio_assets/ctrends.png" /></a></li>
 							<li data-panel="panel-2"><a href="#"><img src="images/2.jpg" /></a></li>
@@ -108,7 +107,9 @@
 						<div>
 							<img style="width:55%" src="portfolio_assets/ctrends.png"/>
 							<h3>CareerTrends</h3>
-							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development.</p>
+							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. Below are two examples of visualizations I created using javascript and jquery, along with visualization libraries from HighCharts & Google Charts.</p>
+							<div class="ftb-widget" data-width="500" data-height="600" data-widget-id="fHkqFgnRBPL" data-href="http://career-profiles.careertrends.com/l/439/Surgeons" ><a href="http://career-profiles.careertrends.com/l/439/Surgeons" target="_blank" style="font:14px/16px arial;color:#3d3d3d;">Annual Salary for Surgeons | CareerTrends</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script>
+							<div class="ftb-widget" data-width="770" data-height="600" data-widget-id="9w4F5WHrt1r" data-href="http://career-profiles.careertrends.com/l/439/Surgeons" ><a href="http://career-profiles.careertrends.com/l/439/Surgeons" target="_blank" style="font:14px/16px arial;color:#3d3d3d;">Typical Career Changes for Surgeons | CareerTrends</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script>
 						</div>
 					</div>
 					<div data-panel="panel-2">
