--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
 						<h2>Portfolio</h2>
 						<ul id="bl-work-items">
 							<li data-panel="panel-1"><a href="http://www.careertrends.com/"><img src="portfolio_assets/ctrends_small.png" /></a></li>
-							<li data-panel="panel-2"><a href="#"><img src="images/2.jpg" /></a></li>
+							<li data-panel="panel-2"><a href="http://www.coroflot.com/rnatraj/DocNote"><img src="portfolio_assets/docnote.png" /></a></li>
+							<!--
 							<li data-panel="panel-3"><a href="#"><img src="images/3.jpg" /></a></li>
 							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
+						-->
 						</ul>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
@@ -103,6 +105,7 @@
 
 				<!-- Panel items for the portfolio section -->
 				<div class="bl-panel-items" id="bl-panel-work-items">
+					<span class="bl-icon bl-icon-close"></span>
 					<div data-panel="panel-1">
 						<div>
 							<img style="width:55%" src="portfolio_assets/ctrends.png"/>
@@ -115,11 +118,12 @@
 					</div>
 					<div data-panel="panel-2">
 						<div>
-							<img src="images/2.jpg" />
-							<h3>Chillwave mustache</h3>
-							<p>Squid vinyl scenester literally pug, hashtag tofu try-hard typewriter polaroid craft beer mlkshk cardigan photo booth PBR. Chillwave 90's gentrify american apparel carles disrupt. Pinterest semiotics single-origin coffee craft beer thundercats irony, tumblr bushwick intelligentsia pickled. Narwhal mustache godard master cleanse street art, occupy ugh selfies put a bird on it cray salvia four loko gluten-free shoreditch.</p>
+							<img src="portfolio_assets/docnote.png" />
+							<h3>DocNote</h3>
+							<p>DocNote is a clean and simple way to help NeuroRadiology students annotate, save, share and study the many images they diagnose on a daily basis. After several months of working with the students and faculty at Tufts Medical Center, DocNote was designed and prototyped based on the needs and goals of the department. This project involved contextual interviewing, observation, workflow analysis, storyboarding, user persona creation, and usability testing.</p>
 						</div>
 					</div>
+					<!--
 					<div data-panel="panel-3">
 						<div>
 							<img src="images/3.jpg" />
@@ -134,9 +138,9 @@
 							<p>Fashion axe 90's pug fap. Blog wayfarers brooklyn dreamcatcher, bicycle rights retro YOLO. Wes anderson lomo 90's food truck 3 wolf moon, twee jean shorts. Iphone small batch twee wolf yr before they sold out. Brooklyn echo park cred, portland pug selvage flannel seitan tousled mcsweeney's.</p>
 						</div>
 					</div>
+				-->
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
-						<span class="bl-icon bl-icon-close"></span>
 					</nav>
 				</div>
 			</div>
