--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 					<div class="bl-content">
 						<h2>Portfolio</h2>
 						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="http://www.careertrends.com/"><img src="portfolio_assets/ctrends_small.png" /></a></li>
-							<li data-panel="panel-2"><a href="http://www.coroflot.com/rnatraj/DocNote"><img src="portfolio_assets/docnote.png" /></a></li>
+							<li data-panel="panel-1"><a href="#"><img src="portfolio_assets/ctrends_small.png" /></a></li>
+							<li data-panel="panel-2"><a href="#"><img src="portfolio_assets/docnote.png" /></a></li>
 							<!--
 							<li data-panel="panel-3"><a href="#"><img src="images/3.jpg" /></a></li>
 							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
@@ -105,11 +105,11 @@
 
 				<!-- Panel items for the portfolio section -->
 				<div class="bl-panel-items" id="bl-panel-work-items">
+					<span class="bl-icon bl-icon-close"></span>
 					<div data-panel="panel-1">
-						<span class="bl-icon bl-icon-close"></span>
 						<div>
 
-							<img style="width:55%" src="portfolio_assets/ctrends.png"/>
+							<a href="http://www.careertrends.com/"><img style="width:55%" src="portfolio_assets/ctrends.png"/></a>
 							<h3>CareerTrends</h3>
 							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. <br>
 							Here are two examples of visualizations I created using javascript and jquery, along with visualization libraries from HighCharts & Google Charts.</p>
@@ -120,9 +120,9 @@
 					<div data-panel="panel-2">
 						<span class="bl-icon bl-icon-close"></span>
 						<div>
-							<img style="width:55%" src="portfolio_assets/docnote.png" />
+							<a href="http://www.coroflot.com/rnatraj/DocNote"><img style="width:55%" src="portfolio_assets/docnote.png"/></a>
 							<h3>DocNote</h3>
-							<p>DocNote is a clean and simple way to help NeuroRadiology students annotate, save, share and study the many images they diagnose on a daily basis. After several months of working with the students and faculty at Tufts Medical Center, DocNote was designed and prototyped based on the needs and goals of the department. This project involved contextual interviewing, observation, workflow analysis, storyboarding, user persona creation, and usability testing.</p>
+							<p>DocNote is a clean and simple way to help NeuroRadiology students annotate, save, share and study the many images they diagnose on a daily basis. After several months of working with the students and faculty at Tufts Medical Center, DocNote was designed and prototyped based on the needs and goals of the department. This project involved contextual interviewing, observation, workflow analysis, storyboarding, user persona creation and usability testing.</p>
 						</div>
 					</div>
 					<!--
