--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
 
 				<!-- Panel items for the portfolio section -->
 				<div class="bl-panel-items" id="bl-panel-work-items">
-					<span class="bl-icon bl-icon-close"></span>
 					<div data-panel="panel-1">
 						<div>
 							<span class="bl-icon bl-icon-close"></span>
 							<a href="http://www.careertrends.com/" target="_blank"><img style="width:55%" src="portfolio_assets/ctrends.png"/></a>
 							<h3>CareerTrends</h3>
-							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. <br>
+							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL processes (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. <br>
 							Here are two examples of visualizations I created using javascript and jquery, along with visualization libraries from HighCharts & Google Charts.</p>
 							<div class="ftb-widget" data-width="500" data-height="600" data-widget-id="7NCaEUFZxsN" data-href="http://career-profiles.careertrends.com/l/439/Surgeons" ><a href="http://career-profiles.careertrends.com/l/439/Surgeons" target="_blank" style="font:14px/16px arial;color:#3d3d3d;">Annual Salary for Surgeons | CareerTrends</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script><br><br>
 							<div class="ftb-widget" data-width="770" data-height="600" data-widget-id="aFVZDH11mVn" data-href="http://career-profiles.careertrends.com/l/439/Surgeons" ><a href="http://career-profiles.careertrends.com/l/439/Surgeons" target="_blank" style="font:14px/16px arial;color:#3d3d3d;">Typical Career Changes for Surgeons | CareerTrends</a></div><script async src="https://s.graphiq.com/rx/widgets.js"></script>
@@ -119,7 +118,6 @@
 					</div>
 					<div data-panel="panel-2">
 						<div>
-							<span class="bl-icon bl-icon-close"></span>
 							<a href="http://www.coroflot.com/rnatraj/DocNote" target="_blank"><img style="width:55%" src="portfolio_assets/docnote.png"/></a>
 							<h3>DocNote</h3>
 							<p>DocNote is a clean and simple way to help NeuroRadiology students annotate, save, share and study the many images they diagnose on a daily basis. After several months of working with the students and faculty at Tufts Medical Center, DocNote was designed and prototyped based on the needs and goals of the department. This project involved contextual interviewing, observation, workflow analysis, storyboarding, user persona creation and usability testing. The project was done in a collaborative manner with team members from graphic design and computer science backgrounds.</p>
@@ -143,6 +141,7 @@
 				-->
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
+						<span class="bl-icon bl-icon-close"></span>
 					</nav>
 				</div>
 			</div>
