--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 		<link rel="stylesheet" type="text/css" href="index.css" />
 		<title>Rohan Natraj | Research, UX, Development</title>
 		
@@ -72,10 +73,8 @@
 						<ul id="bl-work-items">
 							<li data-panel="panel-1"><a href="#"><img src="portfolio_assets/ctrends_small.png" /></a></li>
 							<li data-panel="panel-2"><a href="#"><img src="portfolio_assets/docnote.png" /></a></li>
-							<!--
-							<li data-panel="panel-3"><a href="#"><img src="images/3.jpg" /></a></li>
+							<li data-panel="panel-3"><a href="#"><img src="portfolio_assets/efinder.png" /></a></li>
 							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
-						-->
 						</ul>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
