--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<div class="bl-panel-items" id="bl-panel-work-items">
 					<div data-panel="panel-1">
 						<div>
-							<a href="http://www.careertrends.com/" target="_blank"><img style="width:30%" src="portfolio_assets/ctrends.png"/></a>
+							<a href="http://www.careertrends.com/" target="_blank"><img src="portfolio_assets/ctrends.png"/></a>
 							<h3>CareerTrends</h3>
 							<p>CareerTrends is a website that provides a wealth of information about salaries, employment and even personality types to help job seekers make informed career moves. This project inolved extensive use of MySQL and ETL processes (using Pentaho Kettle) to structure & analyze several datasets from government sources. Launching this website required cross-disciplinary collaboration with individuals from engineering and business development. <br>
 							Here are two examples of visualizations I created using javascript and jquery, along with visualization libraries from HighCharts & Google Charts.</p>
@@ -116,14 +116,14 @@
 					</div>
 					<div data-panel="panel-2">
 						<div>
-							<a href="http://www.coroflot.com/rnatraj/DocNote" target="_blank"><img style="width:30%" src="portfolio_assets/docnote.png"/></a>
+							<a href="http://www.coroflot.com/rnatraj/DocNote" target="_blank"><img src="portfolio_assets/docnote.png"/></a>
 							<h3>DocNote</h3>
 							<p>DocNote is a clean and simple way to help NeuroRadiology students annotate, save, share and study the many images they diagnose on a daily basis. After several months of working with the students and faculty at Tufts Medical Center, DocNote was designed and prototyped based on the needs and goals of the department. This project involved contextual interviewing, observation, workflow analysis, storyboarding, user persona creation and usability testing. The project was done in a collaborative manner with team members from graphic design and computer science backgrounds.</p>
 						</div>
 					</div>
 					<div data-panel="panel-3">
 						<div>
-							<img img style="width:30%" src="portfolio_assets/efinder.png" />
+							<a href="http://www.coroflot.com/rnatraj/EventFindr" target="_blank"><img src="portfolio_assets/efinder.png" />
 							<h3>EventFindr</h3>
 							<p>EventFindr connects people to events in their area based on the things they like and more importantly, the things they do not like. Users may build a profile of likes and dislikes and let EventFindr find the perfect way to spend their day.</p>
 						</div>
