--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 					<div class="bl-content">
 						<h2>Portfolio</h2>
 						<ul id="bl-work-items">
-							<li data-panel="panel-1"><a href="#"><img src="portfolio_assets/ctrends_small.png" /></a></li>
+							<li data-panel="panel-1"><a href="#"><img src="portfolio_assets/ctrends_small.png"/></a></li>
 							<li data-panel="panel-2"><a href="#"><img src="portfolio_assets/docnote.png" /></a></li>
 							<li data-panel="panel-3"><a href="#"><img src="portfolio_assets/efinder.png" /></a></li>
-							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
+							<li data-panel="panel-4"><a href="#"><img src="portfolio_assets/rguru.png" /></a></li>
 						</ul>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
@@ -123,16 +123,16 @@
 					</div>
 					<div data-panel="panel-3">
 						<div>
-							<a href="http://www.coroflot.com/rnatraj/EventFindr" target="_blank"><img src="portfolio_assets/efinder.png" />
+							<a href="http://www.coroflot.com/rnatraj/EventFindr" target="_blank"><img src="portfolio_assets/efinder.png" /></a>
 							<h3>EventFindr</h3>
 							<p>EventFindr connects people to events in their area based on the things they like and more importantly, the things they do not like. Users may build a profile of likes and dislikes and let EventFindr find the perfect way to spend their day.</p>
 						</div>
 					</div>
 					<div data-panel="panel-4">
 						<div>
-							<img src="images/4.jpg" />
-							<h3>Brooklyn dreamcatcher</h3>
-							<p>Fashion axe 90's pug fap. Blog wayfarers brooklyn dreamcatcher, bicycle rights retro YOLO. Wes anderson lomo 90's food truck 3 wolf moon, twee jean shorts. Iphone small batch twee wolf yr before they sold out. Brooklyn echo park cred, portland pug selvage flannel seitan tousled mcsweeney's.</p>
+							<a href="http://www.coroflot.com/rnatraj/Recipe-Guru" target="_blank"><img src="portfolio_assets/rguru.png"/></a>
+							<h3>Recipe Guru</h3>
+							<p>Don't know what to cook with what you've got in your pantry? Recipe Guru is a simple application that finds recipes based on what you have at home. Users can search for recipes or upload their own creations. </p>
 						</div>
 					</div>
 					<nav>
