--- a/index_v2.html
+++ b/index_v2.html
@@ -14,13 +14,13 @@
 </div>
 <div class="row" id="contact-section">
 <div class = "columns">
-	<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:150px; height:150px" src="icons/linkedin.png"/></a>
+	<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img src="icons/linkedin.png"/></a>
 </div>
 <div class = "columns">
-	<a href="mailto:ron4trj@gmail.com"><img style="width:150px; height:150px" src="icons/gmail.png"/></a>
+	<a href="mailto:ron4trj@gmail.com"><img src="icons/gmail.png"/></a>
 </div>
 <div class = "columns">
-	<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:150px; height:150px" src="icons/facebook.png"/></a>
+	<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img src="icons/facebook.png"/></a>
 </div>
 
 </div>
