--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <title>Rohan Natraj | User Experience, Research, Development</title>
 <link rel="stylesheet" type="text/css" href="index.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation-flex.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.min.js"></script>
 <script src="mainPage.js"></script>
 
 
 <body>
+<div data-sticky-container>
+	<div class="sticky" id="menu-list" data-sticky data-margin-top="0" style="width:100%;" data-margin-bottom="0" data-top-anchor="about" data-btm-anchor="bottomOfContentId:contact">
+		<nav data-magellan>
+			<ul class="horizontal menu expanded">
+				<li class="menu-text">Rohan Natraj</li>
+    			<li><a href="#about">About</a></li>
+    			<li><a href="#resume">Resume</a></li>
+    			<li><a href="#portfolio">Portfolio</a></li>
+    			<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+</div>
+<div id="about" data-magellan-target="about">
+
+</div>
+<!--
 <div class="column row" id="name">
 <h1>Rohan Natraj</h1>
 </div>
@@ -24,7 +43,7 @@
 </div>
 
 </div>
-
+-->
 </body>
 
 </head>
