--- a/index.html
+++ b/index.html
@@ -8,42 +8,29 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js"></script>
 <script src="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.min.js"></script>
 <script src="mainPage.js"></script>
-
+</head>
 
 <body>
-<div data-sticky-container>
-	<div class="sticky" id="menu-list" data-sticky data-margin-top="0" style="width:100%;" data-margin-bottom="0" data-top-anchor="about" data-btm-anchor="bottomOfContentId:contact">
-		<nav data-magellan>
-			<ul class="horizontal menu expanded">
-				<li class="menu-text">Rohan Natraj</li>
-    			<li><a href="#about">About</a></li>
-    			<li><a href="#resume">Resume</a></li>
-    			<li><a href="#portfolio">Portfolio</a></li>
-    			<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</div>
-</div>
-<div id="about" data-magellan-target="about">
-
-</div>
-<!--
-<div class="column row" id="name">
-<h1>Rohan Natraj</h1>
-</div>
-<div class="row" id="contact-section">
-<div class = "columns">
-	<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img src="icons/linkedin.png"/></a>
-</div>
-<div class = "columns">
-	<a href="mailto:ron4trj@gmail.com"><img src="icons/gmail.png"/></a>
-</div>
-<div class = "columns">
-	<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img src="icons/facebook.png"/></a>
-</div>
-
-</div>
--->
+<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle></button>
+        <div class="title-bar-title">Menu</div>
+      </div>
+      
+      <div class="top-bar" id="example-menu">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Site Title</li>
+            <li>
+              <a href="#">One</a>
+              <ul class="menu vertical">
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li><a href="#">Three</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+          </ul>
+        </div>
+      </div>
 </body>
-
-</head>
