--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <head>
 <title>Rohan Natraj | User Experience, Research, Development</title>
+<link rel="icon" href="/icons/natrajr.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="index.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation-flex.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.css"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js"></script>
-<script src="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.min.js"></script>
-<script src="mainPage.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js" defer></script>
+<script src="mainPage.js" defer></script>
 </head>
 
 <body>
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-        <button class="menu-icon" type="button" data-toggle></button>
-        <div class="title-bar-title">Menu</div>
-      </div>
-      
-      <div class="top-bar" id="example-menu">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Site Title</li>
-            <li>
-              <a href="#">One</a>
-              <ul class="menu vertical">
-                <li><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-          </ul>
-        </div>
-      </div>
+  <div id="menu">
+  <ul class="vertical medium-horizontal menu">
+    <li class="menu-text">Rohan Natraj</li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#">Resume</a></li>
+    <li><a href="#">Portfolio</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</div>
+<section class="landing large-12 columns" id="landing">
+  <div class="headline">
+  <h1>Hello & Welcome! My Name is Rohan Natraj</h1>
+  <h3>I am an analytical and creative product developer with a solid background in cognitive science. Established skills in delivering insights on how to create clean, pleasing and data-driven user experiences. I love learning new technical tools and applying technical solutions to complex problems.</h3>
+  </div>
+</section>
 </body>
