--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <head>
 <title>Rohan Natraj | User Experience, Research, Development</title>
-<link rel="icon" href="/icons/natrajr.ico" type="image/x-icon">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="./icons/natraj.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="index.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation-flex.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.owlcarousel/1.31/owl.carousel.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.js" defer></script>
 <script src="mainPage.js" defer></script>
 </head>
 
 <body>
-  <div id="menu">
-  <ul class="vertical medium-horizontal menu">
-    <li class="menu-text">Rohan Natraj</li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#">Resume</a></li>
-    <li><a href="#">Portfolio</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</div>
-<section class="landing large-12 columns" id="landing">
-  <div class="headline">
-  <h1>Hello & Welcome! My Name is Rohan Natraj</h1>
-  <h3>I am an analytical and creative product developer with a solid background in cognitive science. Established skills in delivering insights on how to create clean, pleasing and data-driven user experiences. I love learning new technical tools and applying technical solutions to complex problems.</h3>
+<header>
+  <h1>Hello & Welcome!</h1>
+  <p>Rohan Natraj - Analytical Adventurer</p>
+</header>
+<main>
+  <div id = 'about-me'>
+  <h3>About Me</h3>
+  <p>I am analytical and creative product developer with a background in cognitive science. I love exploring how to create clean, pleasing and data-driven user experiences. I am highly adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who treasures new social experiences and diverse perspectives.</p>
+  <p>My hobbies include an insatiable apetitde for traveling, brewing beer, and enjoying all that nature has to offer.</p>
   </div>
-</section>
+</main>
+
 </body>
