--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
 <header>
   <h1>Hello & Welcome!</h1>
-  <p>Rohan Natraj - Analytical Adventurer</p>
+  <p>Rohan Natraj - User Research & Development</p>
 </header>
 <main>
   <div id = 'about-me'>
-  <h3>About Me</h3>
+  <h2>About Me</h2>
   <p>I am analytical and creative product developer with a background in cognitive science. I love exploring how to create clean, pleasing and data-driven user experiences. I am highly adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who treasures new social experiences and diverse perspectives.</p>
   <p>My hobbies include an insatiable apetitde for traveling, brewing beer, and enjoying all that nature has to offer.</p>
+  </div>
+  <div id ="resume">
+    <h2>Resume</h2>
+
   </div>
 </main>
 
