--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Rohan Natraj | User Experience, Research, Development</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="icon" href="./icons/natraj.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
 <link rel="stylesheet" type="text/css" href="index.css"/>
+
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js" defer></script>
 <script src="mainPage.js" defer></script>
+
 </head>
 
 <body>
@@ -14,15 +23,22 @@
   <p>Rohan Natraj - User Research & Development</p>
 </header>
 <main>
-  <div id = 'about-me'>
-  <h2>About Me</h2>
-  <p>I am analytical and creative product developer with a background in cognitive science. I love exploring how to create clean, pleasing and data-driven user experiences. I am highly adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who treasures new social experiences and diverse perspectives.</p>
-  <p>My hobbies include an insatiable apetitde for traveling, brewing beer, and enjoying all that nature has to offer.</p>
+<div class ='container'>
+<div class="row" id = 'about-me'>
+  <div class="col-lg-6" id = "profile-image">
+    <img id='prof-pic' src="./images/Rohan_Natraj_pic.jpg">
   </div>
-  <div id ="resume">
+  <div class="col-lg-6" id='about-desc'>
+    <h2>About Me</h2><br>
+    <p>I am an analytical and creative product developer with a background in cognitive science. I love exploring how to create clean, pleasing and data-driven user experiences. I am highly adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who treasures new social experiences and diverse perspectives.</p>
+      <p>I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer.</p>
+  </div>
+</div>
+  <div id ="resume" class ='row'>
+    <div class="col-lg-6" id = "resume">
     <h2>Resume</h2>
-
   </div>
+</div>
 </main>
-
 </body>
+</html>
