new icon, add resume section

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 <title>Rohan Natraj | User Experience, Research, Development</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" href="./icons/natraj.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
 <link rel="stylesheet" type="text/css" href="index.css"/>
 
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
@@ -25,19 +26,35 @@
 <main>
 <div class ='container'>
 <div class="row" id = 'about-me'>
-  <div class="col-lg-6" id = "profile-image">
+  <div class="col-md-6" id = "profile-image">
     <img id='prof-pic' src="./images/Rohan_Natraj_pic.jpg">
   </div>
-  <div class="col-lg-6" id='about-desc'>
+  <div class="col-md-6" id='about-desc'>
     <h2>About Me</h2><br>
-    <p>I am an analytical and creative product developer with a background in cognitive science. I love exploring how to create clean, pleasing and data-driven user experiences. I am highly adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who treasures new social experiences and diverse perspectives.</p>
-      <p>I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer.</p>
+    <p>Hi! My name is Rohan Natraj. I am originally an east coaster from suburban philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I will try just about anything (within reason) once and treasure the novelty of new experiences. I am a ruminator who enjoys tackling complex issues with others. </p>
+      </p>
+      <p></p>
   </div>
 </div>
   <div id ="resume" class ='row'>
-    <div class="col-lg-6" id = "resume">
-    <h2>Resume</h2>
+    <div class="col-md-6" id ="resume-icon-col">
+      <a href="https://www.visualcv.com/isc15ulyx3i" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
+    </div>
+    <div class="col-md-6" id ="resume-desc">
+      <h2>Resume</h2><br>
+      <p>I am a creative and analytical product developer with a background in cognitive science. I am adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, specifically in the areas of human-computer interaction, collaborative technology design and user experience. I believe exploring human perception and its interaction with behavior leads to a clearer understanding of how people can operate with the various technologies that are integrated into our daily lives. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
+    </div>
+    <div class='row'>
+      <div class = 'col-md-1'>
+        
+      </div>
+    </div>
   </div>
+<div id='contact' class='row'>
+
+
+
+</div>
 </div>
 </main>
 </body>
