--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" href="index.css"/>
-
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js" defer></script>
 <script src="mainPage.js" defer></script>
 
@@ -31,29 +30,68 @@
   </div>
   <div class="col-md-6" id='about-desc'>
     <h2>About Me</h2><br>
-    <p>Hi! My name is Rohan Natraj. I am originally an east coaster from suburban philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I will try just about anything (within reason) once and treasure the novelty of new experiences. I am a ruminator who enjoys tackling complex issues with others. </p>
+    <p>Hi! My name is Rohan Natraj. I'm originally an east coaster from suburban philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I will try just about anything (within reason) once and treasure the novelty of new experiences. I am a ruminator who likes tackling complex issues with others. </p>
       </p>
-      <p></p>
   </div>
 </div>
   <div id ="resume" class ='row'>
     <div class="col-md-6" id ="resume-icon-col">
       <a href="https://www.visualcv.com/isc15ulyx3i" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
+      <div class="row">
+        <div class='col-md-12'>
+          <a href='https://www.visualcv.com/isc15ulyx3i' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View Resume</a>
+        </div>
+      </div>
     </div>
     <div class="col-md-6" id ="resume-desc">
       <h2>Resume</h2><br>
-      <p>I am a creative and analytical product developer with a background in cognitive science. I am adept at learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, specifically in the areas of human-computer interaction, collaborative technology design and user experience. I believe exploring human perception and its interaction with behavior leads to a clearer understanding of how people can operate with the various technologies that are integrated into our daily lives. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
+      <p>I'm a creative and analytical product developer with a background in cognitive science. I enjoy learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, specifically in the areas of human-computer interaction, collaborative technology design and user experience. I believe exploring human perception and its interaction with behavior leads to a clearer understanding of how people can operate with the various technologies that are integrated into our daily lives. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
     </div>
-    <div class='row'>
-      <div class = 'col-md-1'>
-        
-      </div>
+  </div>
+  <div class='row' id ='portfolio'>
+    <div class="col-md-6" id ="portfolio-carousel">
+    </div>
+    <div class="col-md-6" id ="portfolio-desc">
+    </div>
+  </div>
+  <div class='row' id ='skills-bar'>
+    <div class="col-md-12"><h3>Here are some of the technologies I work with. I am always seeking to learn more & grow</h3></div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://www.javascript.com/" target="_blank"><img src="./icons/jsLogo.png"></a>
+    </div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://jquery.com/" target="_blank"><img src="./icons/jquery.png"></a>
+    </div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank"><img src="./icons/html5.png"></a>
+    </div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://www.mysql.com/" target="_blank"><img src="./icons/mysql.png" style="width:65%"></a>
+    </div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://github.com/natrajr" target="_blank"><img src="./icons/github.png"></a>
+    </div>
+    <div class="col-xs-4 col-md-2">
+      <a href="https://balsamiq.com/" target="_blank"><img src="./icons/balsamiq.png"></a>
+    </div>
+    <div class="col-xs-12 col-md-12 col-md-offset-4">
+      <a href="http://community.pentaho.com/projects/data-integration/" target="_blank"><img src="./icons/kettle.png" style="width:25%"></a>
     </div>
   </div>
 <div id='contact' class='row'>
-
-
-
+  <div class="col-md-12">
+    <h2>Contact Info</h2>
+    <h3>Feel free to reach me through e-mail, add me on LinkedIn, or add me on Facebook</h3>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href="mailto:ron4trj@gmail.com" target="_blank"><img src="./icons/gmail.png"></a>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href="https://www.linkedin.com/in/rohannatraj" target="_blank"><img src="./icons/linkedin.png"></a>
+  </div>
+  <div class="col-xs-12 col-md-4">
+    <a href="https://www.facebook.com/rohan.natraj" target="_blank"><img src="./icons/facebook.png"></a>
+  </div>
 </div>
 </div>
 </main>
