--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" href="./icons/natraj.ico" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 <link rel="stylesheet" type="text/css" href="index.css"/>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js" defer></script>
 <script src="mainPage.js" defer></script>
-
 </head>
 
 <body>
@@ -26,11 +25,15 @@
 <div class ='container'>
 <div class="row" id = 'about-me'>
   <div class="col-md-6" id = "profile-image">
-    <img id='prof-pic' src="./images/Rohan_Natraj_pic.jpg">
+    <div class='row'>
+      <div class='col-md-12'>
+        <img id='prof-pic' src="./images/Rohan_Natraj_pic.jpg">
+      </div>
+    </div>
   </div>
   <div class="col-md-6" id='about-desc'>
     <h2>About Me</h2><br>
-    <p>Hi! My name is Rohan Natraj. I'm originally an east coaster from suburban philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I will try just about anything (within reason) once and treasure the novelty of new experiences. I am a ruminator who likes tackling complex issues with others. </p>
+    <p>Hi! My name is Rohan Natraj. I'm originally an east coaster from suburban Philadelphia. After high school, I moved up to Somerville, Massachussetts to study Cognitive Science at Tufts University. I love trying new food, brewing beer, traveling, and enjoying all that nature has to offer. I treasure the novelty of new experiences and will try just about anything (within reason) once. I am a ruminator who likes tackling complex issues with others. </p>
       </p>
   </div>
 </div>
@@ -45,13 +48,37 @@
     </div>
     <div class="col-md-6" id ="resume-desc">
       <h2>Resume</h2><br>
-      <p>I'm a creative and analytical product developer with a background in cognitive science. I enjoy learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, specifically in the areas of human-computer interaction, collaborative technology design and user experience. I believe exploring human perception and its interaction with behavior leads to a clearer understanding of how people can operate with the various technologies that are integrated into our daily lives. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
+      <p>I'm a creative and analytical product developer with a background in cognitive science. I enjoy learning new technical tools and applying technical solutions to complex problems. I am an effective communicator and collaborator who values new social experiences and diverse perspectives. I am interested in applying cognitive science in the tech industry, in the areas of human-computer interaction, collaborative technology design and user experience. My resume shows a combination of technical aptitude and research skills to help any organization develop data-driven, user-centric products. </p>
     </div>
   </div>
-  <div class='row' id ='portfolio'>
-    <div class="col-md-6" id ="portfolio-carousel">
+  <div id ='portfolio' class='row'>
+    <div class='col-sm-6 col-md-6'>
+      <div class='thumbnail'>
+        <img src="./portfolio_assets/ctrends_small.png">
+      </div>
+      <div class ='caption'>
+        <h3>Careers</h3>
+        <p>.
+
+        </p>
+        <p>
+          <a href="http://www.careertrends.com/" class="btn btn-primary" role="button" target="_blank">Visit Website</a>
+          <a href="http://www.coroflot.com/rnatraj/Careers-Website" class="btn btn-default" role="button">See Wireframes</a>
+        </p>
+      </div>
     </div>
-    <div class="col-md-6" id ="portfolio-desc">
+    <div class='col-sm-6 col-md-6'>
+      <div class='thumbnail'>
+        <img src="./portfolio_assets/docnote.jpg">
+      </div>
+      <div class ='caption'>
+        <h3>DocNote</h3>
+        <p>Description of this product</p>
+        <p>
+          <a href="http://www.coroflot.com/rnatraj/DocNote" class="btn btn-primary" role="button" target="_blank">See Wireframes</a>
+          <a href="#" class="btn btn-default" role="button">Download Research Paper</a>
+        </p>
+      </div>
     </div>
   </div>
   <div class='row' id ='skills-bar'>
