--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
   <h1>Hello & Welcome!</h1>
   <p>Rohan Natraj - User Research & Development</p>
 </header>
+<div class="row" id='nav-bar'>
+  <div class="col-md-3">
+    <a href="#about-me">
+      <div class='nav-block'>About</div>
+    </a>
+  </div>
+    <div class="col-md-3">
+      <a href="#resume">
+        <div class="nav-block">Resume</div>
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a href="#portfolio">
+        <div class="nav-block">Portfolio</div>
+      </a>
+    </div>
+  <div class="col-md-3">
+    <a href="#contact">
+      <div class="nav-block">Contact</div>
+    </a>
+  </div>
+</div>
 <main>
 <div class ='container'>
 <div class="row" id = 'about-me'>
@@ -46,7 +68,7 @@
       <a href="https://www.visualcv.com/isc15ulyx3i" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
       <div class="row">
         <div class='col-md-12'>
-          <a href='https://www.visualcv.com/isc15ulyx3i' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View Resume</a>
+          <a href='https://www.visualcv.com/isc15ulyx3i' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
         </div>
       </div>
     </div>
@@ -98,13 +120,14 @@
           important conversations when looking over MRI scans; however, students had no efficient, simply, & reliable way to keep track of
           information for these dialogues. Multiple rounds of prototyping and usability testing lead to a final wireframe design and interaction
           architecture for DocNote.
-        </thead></p>
+        </p>
         <p>
           <a href="http://www.coroflot.com/rnatraj/DocNote" class="btn btn-primary" role="button" target="_blank">See Wireframes</a>
           <a href="https://drive.google.com/file/d/0B4kfi0cfSlHycFNqWDhkQ2REZDQ/view?usp=sharing" class="btn btn-default" role="button" target="_blank">See Research Paper</a>
         </p>
       </div>
     </div>
+    <span class='glyphicon glyphicon-chevron-right'></span>
   </div>
   <div class='row' id ='skills-bar'>
     <div class="col-md-12"><h3>Here are some of the technologies I work with. I am always seeking to learn more & grow</h3></div>
